# simplicitypress

./: .gitignore  .treeignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QT-ATTRIBUTION.txt  README.md  SECURITY.md  SUPPORT.md  SimplicityPress.spec  THIRD-PARTY-NOTICES.txt  cliff.toml  make_release.py  noxfile.py  pyproject.toml
.github/: labeler.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: welcome.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  pr-labeler.yml  release.yml
LICENSES/: pyside_lgpl.txt
docs/: changelog.md  documentation_policy.md  feeds.md  release.md  sbom.md  search_spec.md  sitemap.md  spdx.md  static_search.md  template_context_tables.md  template_variables.md  theme_api_stability.md  theme_from_scratch.md  theme_guide.md
src/simplicitypress/: __init__.py  __main__.py  api.py  cli.py  gui.py
src/simplicitypress/core/: __init__.py  build.py  config.py  content.py  default_config.py  feeds.py  frontmatter.py  fs.py  markdown.py  models.py  render.py  search_index.py  sitemap.py
src/simplicitypress/resources/: __init__.py
src/simplicitypress/scaffold/: __init__.py
src/simplicitypress/scaffold/static/css/: style.css
src/simplicitypress/scaffold/templates/: base.html  feed.xml  index.html  page.html  post.html  search.html  tag.html  tags.html
tests/: conftest.py  test_api_edge_cases.py  test_api_smoke_and_flags.py  test_build_drafts_and_api.py  test_build_edge_cases.py  test_build_smoke.py  test_changelog_generator.py  test_cli_smoke.py  test_config_load.py  test_content_discovery.py  test_content_edge_cases.py  test_docs_audit.py  test_feeds.py  test_frontmatter.py  test_fs.py  test_import.py  test_make_release.py  test_markdown.py  test_search_index.py  test_sitemap.py  test_spdx_headers.py
tools/: __init__.py  add_spdx_headers.py  docs_audit.py  filter_sbom.py  make_release.py  update_changelog.py
