[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simplicitypress"
version = "0.1.0"
description = "A simple, library-first static site generator for posts and pages."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Your Name" },
]
dependencies = [
  "typer>=0.12",
  "jinja2>=3.1",
  "markdown-it-py>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "build",
  "twine",
]

[project.scripts]
simplicitypress = "simplicitypress.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

