[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplicitypress"
version = "0.1.6"
description = "A simple, static site generator for posts and pages, using Markdown and converting to HTML."
readme = "README.md"
requires-python = ">=3.11"
license-files = [ "LICENSE" ]
authors = [
    { name = "Matthew Craig", email = "taggedzi.mpc@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "typer>=0.12",
  "jinja2>=3.1",
  "markdown-it-py>=3.0",
  "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "build",
  "twine",
  "nox",
  "pyinstaller>=6.0",
]

[project.scripts]
simplicitypress = "simplicitypress.cli:app"
simplicitypress-gui = "simplicitypress.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
simplicitypress = [
  "scaffold/templates/*.html",
  "scaffold/templates/*.xml",
  "scaffold/static/css/*.css",
]

# Coverage configuration: treat GUI and __main__ as manual/system-test code
# and exclude them from coverage metrics.
[tool.coverage.run]
omit = [
  "src/simplicitypress/gui.py",
  "src/simplicitypress/__main__.py",
]

